completed large hero block and intro block

--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -37,7 +37,12 @@
 	}
 	
 	&--b-margin-large {
-		margin-bottom: 1.6em;
+		margin-bottom: 6.6em;
 	}
+	
+	&--no-t-margin {
+		margin-top: 0;
+	}
+	
 	
 }
