--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,7 +2,23 @@
 	
 	@mixin clearfix;
 	
-	@mixin atMedium{
+	&--gutters {
+		margin-right:-65px;
+	}
+	
+	&--gutters > div {
+		padding-right: 65px;
+	}
+	
+	&__b-margin-until-medium {
+		margin-bottom: 1rem;
+	}
+	
+	@mixin atMedium {
+		
+		&__b-margin-until-medium{
+		margin-bottom: 0;
+	}
 		
 		&__medium-4{
 			float:left;
@@ -23,16 +39,10 @@
 		&__medium-8--smaller{
 			width: 63%;
 		}
-	}
-	
-	&--gutters {
-		margin-right:-65px;
-	}
-	
-	&--gutters > div{
-		padding-right: 65px;
+		
 		
 	}
+	
 	
 	
 
