--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,7 +1,7 @@
 @import "normalize.css";
 @import "base/_variables";
-@import "modules/_wrapper";
 @import "base/_mixins";
+@import "modules/_wrapper";
 @import "base/_global";
 @import "modules/_large-hero";
 @import "modules/_btn";
@@ -9,4 +9,5 @@
 @import "modules/_headline";
 @import "modules/_row";
 @import "modules/_generic-content-container";
-
+@import "modules/_section-title";
+@import "modules/_feature-item";
