--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,6 +2,10 @@
 	
 	@mixin clearfix;
 	
+	&--t-padding {
+		padding-top: 80px;
+	}
+	
 	&--gutters {
 		margin-right:-65px;
 	}
@@ -16,6 +20,14 @@
 	
 	&--gutters-large > div {
 		padding-right: 100px;
+	}
+	
+	&--gutters-small > div {
+		padding-right: 45px;
+	}
+	
+	&--gutters-small {
+		margin-right: -45px;
 	}
 	
 	&__b-margin-until-medium {
@@ -56,7 +68,16 @@
 		
 	}
 	
-	
+	/* begin equal height rules */
+	&--equal-height-at-medium {
+		@mixin atMedium {
+			display: flex;
+		}
+		& > div {
+			float:none;
+			display: flex;
+		}
+	}
 	
 
 	
