--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -1,6 +1,7 @@
 .site-header {
 	padding: 10px;
-	position: absolute;
+	position: relative;
+	margin-bottom:-186px;
 	z-index: 2;
 	width: 100%;
 	transition: background-color .6s ease-out;
@@ -11,6 +12,7 @@
 	
 	@mixin atMedium {
 		background-color: rgba($mainBlue, .3);
+		margin-bottom:-62px;
 	}
 	
 	&__button-container {
@@ -42,15 +44,62 @@
 	
 	&__menu-icon {
 		width:20px;
-		height:20px;
-		background-color: #FFF;
+		height:19px;
 		position:absolute;
 		z-index: 10;
 		top:10px;
 		right:10px;
 		
+		&::before {
+			content: "";
+			position:absolute;
+			top:0;
+			left:0;
+			width:20px;
+			height: 3px;
+			background-color:#FFF;
+			transform-origin: 0 0;
+			transition: transform .6s ease-out;
+		}
+		&__middle{
+			position:absolute;
+			top:8px;
+			left:0;
+			width:20px;
+			height: 3px;
+			background-color:#FFF;
+			transition: all .6s ease-out;
+			
+		}
+		&::after {
+			content: "";
+			position:absolute;
+			bottom:0;
+			left:0;
+			width:20px;
+			height: 3px;
+			background-color:#FFF;
+			transform-origin: 0 100%;
+			transition: transform .6s ease-out;
+		}
+		
 		@mixin atMedium {
 			display:none;
+		}
+	}
+	
+	&__menu-icon--close-x {
+		&::before {
+			transform: rotate(45deg) scaleX(1.25);
+		}
+		
+		.site-header__menu-icon__middle {
+			opacity: 0;
+			transform: scaleX(0);
+		}
+		
+		&::after {
+			transform: rotate(-45deg) scaleX(1.25) translateY(1px);
 		}
 	}
 	
