--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -1,7 +1,7 @@
 .site-header {
 	padding: 10px;
-	position: relative;
-	margin-bottom:-186px;
+	position: absolute;
+	
 	z-index: 2;
 	width: 100%;
 	transition: background-color .6s ease-out;
@@ -11,8 +11,12 @@
 	}
 	
 	@mixin atMedium {
+		position:fixed;
 		background-color: rgba($mainBlue, .3);
-		margin-bottom:-62px;
+		
+		&--dark{
+			background-color: rgba($mainBlue, .85);
+		}
 	}
 	
 	&__button-container {
@@ -26,6 +30,7 @@
 		top: 0;
 		left:50%;
 		transform: translateX(-50%) scale(.8);
+		transition: all .3s ease-out;
 		transform-origin: 50% 0%;
 		background-color: $mainBlue;
 		padding: 25px 36px;
@@ -33,6 +38,11 @@
 		@mixin atMedium {
 			left: auto;
 			transform: translateX(0);
+			
+			.site-header--dark & {
+				transform: scale(.565);
+				background-color: rgba($mainBlue, 0.5);
+			}
 		}
 		
 		
@@ -43,18 +53,19 @@
 	}
 	
 	&__menu-icon {
-		width:20px;
-		height:19px;
+		width:28px;
+		height:27px;
 		position:absolute;
 		z-index: 10;
-		top:10px;
-		right:10px;
+		top:15px;
+		right:15px;
+		background-color: rgba($mainBlue, .3);
 		
 		&::before {
 			content: "";
 			position:absolute;
-			top:0;
-			left:0;
+			top:4px;
+			left:4px;
 			width:20px;
 			height: 3px;
 			background-color:#FFF;
@@ -63,8 +74,8 @@
 		}
 		&__middle{
 			position:absolute;
-			top:8px;
-			left:0;
+			top:12px;
+			left:4px;
 			width:20px;
 			height: 3px;
 			background-color:#FFF;
@@ -74,8 +85,8 @@
 		&::after {
 			content: "";
 			position:absolute;
-			bottom:0;
-			left:0;
+			bottom:4px;
+			left:4px;
 			width:20px;
 			height: 3px;
 			background-color:#FFF;
@@ -90,7 +101,7 @@
 	
 	&__menu-icon--close-x {
 		&::before {
-			transform: rotate(45deg) scaleX(1.25);
+			transform: rotate(45deg) scaleX(1.25) translateX(2px) translateY(-2px);
 		}
 		
 		.site-header__menu-icon__middle {
@@ -99,7 +110,7 @@
 		}
 		
 		&::after {
-			transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+			transform: rotate(-45deg) scaleX(1.25) translateX(1px) translateY(4px);
 		}
 	}
 	
