--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -55,7 +55,7 @@
 	&__menu-icon {
 		width:28px;
 		height:27px;
-		position:absolute;
+		position:fixed;
 		z-index: 10;
 		top:15px;
 		right:15px;
@@ -128,6 +128,7 @@
 			z-index: 1;
 			padding-top:0;
 			transform: scale(1);
+			position: relative;
 			
 		}
 		
