--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -1,11 +1,11 @@
 /* do not edit modules/_sprite.css directly as it is generated automaticaly by gulp/templates/sprite.css */
 
 		.icon {
-			background-image: url('/assets/images/sprites/sprite-0f9283b3.svg');
+			background-image: url('../../assets/images/sprites/sprite-0f9283b3.svg');
 		}
 
 		.no-svg .icon {
-			background-image: url('/assets/images/sprites/sprite-0f9283b3.png');
+			background-image: url('../../assets/images/sprites/sprite-0f9283b3.png');
 		}
 		
 	
